# swyk

./: Project Structure.md  README.md  install.sh  uninstall.sh
core/: __init__.py  agent.py  agent_engine.py  api_client.py  config.py  llm.py  llm_client.py  logger.py  main.py  permissions.py  sandbox.py  tools.py  ui.py
gui/: __init__.py  app.py  chat_panel.py  dialogs.py  office_canvas.py  sprites.py
sandbox-executor/: Cargo.toml
sandbox-executor/src/: main.rs
