[package]
name = "swik-sandbox"
version = "0.1.0"
edition = "2021"
description = "Hardened sandbox executor for SWIK"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["fs", "process", "user"] }
